Closed
Bug 440185
Opened 17 years ago
Closed 17 years ago
crash importing outlook email [@ nsMsgLocalMailFolder::IsChildOfTrash]
Categories
(MailNews Core :: Import, defect)
MailNews Core
Import
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9.1a1
People
(Reporter: wsmwk, Assigned: timeless)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
1005 bytes,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
nsMsgLocalMailFolder::IsChildOfTrash
at least two such crashes on talkback
TB42862637
Stack Signature nsMsgLocalMailFolder::IsChildOfTrash 2c61f030
Product ID Thunderbird2
Build ID 2008021305
\Platform Win32
Operating System Windows NT 5.1 build 2600
Module thunderbird.exe + (0050e67a)
URL visited
User Comments Trying to import e-mail from Outlook
Source File, Line No. e:/builds/tinderbox/Tb-Mozilla1.8-Release/WINNT_5.0_Depend/mozilla/mailnews/local/src/nsLocalMailFolder.cpp
Stack Trace
nsMsgLocalMailFolder::IsChildOfTrash [mozilla/mailnews/local/src/nsLocalMailFolder.cpp, line 1011]
nsMsgLocalMailFolder::CopyFolderLocal [mozilla/mailnews/local/src/nsLocalMailFolder.cpp, line 1967]
nsMsgLocalMailFolder::CopyFolder [mozilla/mailnews/local/src/nsLocalMailFolder.cpp, line 1950]
nsMsgFolderDataSource::DoFolderCopyToFolder [mozilla/mailnews/base/src/nsMsgFolderDataSource.cpp, line 2068]
nsMsgFolderDataSource::DoCommand [mozilla/mailnews/base/src/nsMsgFolderDataSource.cpp, line 865]
CompositeDataSourceImpl::DoCommand [mozilla/rdf/base/src/nsCompositeDataSource.cpp, line 1337]
nsMessenger::CopyFolders [mozilla/mailnews/base/src/nsMessenger.cpp, line 1490]
XPTC_InvokeByIndex [mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp, line 102]
XPCWrappedNative::CallMethod [mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 2169]
XPC_WN_CallMethod [mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 1455]
js_Invoke [mozilla/js/src/jsinterp.c, line 1379]
js_Interpret [mozilla/js/src/jsinterp.c, line 3950]
js_Invoke [mozilla/js/src/jsinterp.c, line 1398]
nsXPCWrappedJSClass::CallMethod [mozilla/js/src/xpconnect/src/xpcwrappedjsclass.cpp, line 1453]
Attachment #325655 -
Flags: review?
Attachment #325655 -
Flags: review? → review?(bienvenu)
Comment 2•17 years ago
|
||
Comment on attachment 325655 [details] [diff] [review]
parent folder can be null
yes, it can be null (though this is worthy of an assertion, I think)
Attachment #325655 -
Flags: review?(bienvenu) → review+
Updated•17 years ago
|
Assignee: nobody → timeless
Comment 3•17 years ago
|
||
Adding blocking flag so this get's checked in for a2. (timeless: let us know if you want someone to do it for you)
Flags: blocking-thunderbird3.0a2?
OS: Windows XP → All
Hardware: PC → All
Comment on attachment 325655 [details] [diff] [review]
parent folder can be null
mozilla/mailnews/local/src/nsLocalMailFolder.cpp 1.595
assertion = crash in the new world, so no go :(
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Flags: blocking-thunderbird3.0a2? → blocking-thunderbird3.0a2+
Target Milestone: --- → mozilla1.9.1a1
Updated•17 years ago
|
Product: Core → MailNews Core
Updated•14 years ago
|
Crash Signature: [@ nsMsgLocalMailFolder::IsChildOfTrash]
You need to log in
before you can comment on or make changes to this bug.
Description
•