Bug 440185 crash importing outlook email [@ nsMsgLocalMailFolder::IsChildOfTrash] (edit) r=bienvenu